apps/system/security/authelia/deployment.yaml
# authelia/deployment.yaml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: authelia
  namespace: security
  labels:
    app: authelia
spec:
  selector:
    matchLabels:
      app: authelia
  template:
    metadata:
      labels:
        app: authelia
        networking/expose-web-ui: "true"
    spec:
      enableServiceLinks: false
      containers:
        - name: authelia
          image: ghcr.io/authelia/authelia
          ports:
            - name: web-ui
              containerPort: 9091
              hostPort: 9091
              protocol: TCP
          resources:
            requests:
              cpu: 100m
              memory: 64Mi
            limits:
              cpu: 1000m
              memory: 256Mi
          volumeMounts:
            - name: config-volume
              mountPath: /config
            - name: authelia-keys
              mountPath: /config/secrets

      volumes:
        - name: authelia-keys
          secret:
            secretName: authelia-secrets-files
            items:
              - key: oidc_private.pem
                path: oidc/jwks/oidc_private.pem
        - name: config-template-volume
          configMap:
            name: authelia-config
        - name: config-volume
          emptyDir: {}
