apps/system/security/authelia/http-route.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: authelia-headers
spec:
  headers:
    customRequestHeaders:
      X-Forwarded-Proto: "https"
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: authelia
spec:
  parentRefs:
    - name: internal-gateway
      namespace: traefik
    - name: external-gateway
      namespace: traefik
  hostnames:
    - "auth.kerrlab.app"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: authelia
          port: 9091
      filters:
        - type: ExtensionRef
          extensionRef:
            group: "traefik.io"
            kind: "Middleware"
            name: "authelia-rate-limit"
        - type: ExtensionRef
          extensionRef:
            group: "traefik.io"
            kind: "Middleware"
            name: "authelia-headers"
