apps/system/security/authelia/dragonfly-network-policy.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: authelia-dragonfly-policy
spec:
  endpointSelector:
    matchLabels:
      app: authelia-dragonfly
  ingress:
    - fromEndpoints:
        - matchLabels:
            app: authelia
      toPorts:
        - ports:
            - port: "6379"
              protocol: "TCP"
