apps/system/security/authelia/network-policy.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: authelia-policy
spec:
  endpointSelector:
    matchLabels:
      app: authelia

  # This defines the allowed outbound (egress) traffic
  egress:
    - toEndpoints:
        - matchLabels:
            app: authelia-dragonfly
      toPorts:
        - ports:
            - port: "6379"
              protocol: "TCP"
    - toEndpoints:
        - matchLabels:
            app: lldap
      toPorts:
        - ports:
            - port: "6360"
              protocol: TCP
    # Connection to external PostgreSQL DB on Synology
    - toCIDR:
        - 10.10.1.218/32
      toPorts:
        - ports:
            - port: "15432"
              protocol: TCP
    - toEntities:
        - "world"
      toPorts:
        # For 2FA/TOTP time-sync and update checks
        - ports:
            # for NTP
            - port: "123"
              protocol: UDP
            - port: "443"
              protocol: TCP
            - port: "443"
              protocol: UDP
            # For SMTP (e.g., Gmail)
            - port: "587"
              protocol: TCP
            - port: "465"
              protocol: TCP
